
2007-01-17 cjg
 * fix rolllogs to EPrints::Index::rolllogs in indexer

2007-01-20 tdb
 * Fixed security holes in lookup scripts

2007-01-22 cjg
 * Removed SQL from lookup script.

2007-01-22 cjg
 * Fixed bug in Session which caused buttons to do odd things for
    a few seconds after initial login. (due to failing to clear an
    apache note).

2007-01-29 tdb
 * Initial version of an 'aqua' theme

2007-02-02 tdb
 * Make File::BOM use conditional on Perl version

2007-02-07 moj
 * Added WorkflowEdit - will be screen for editing workflows via web.

2007-02-12 cjg
 * Added an abort to the soap tool in case of no request.

2007-02-12 moj
 * WorkflowEdit now has a render function
 * Nested ifs are now collapsed
 * Special case for XHTML component added.

2007-02-15 cjg
 * Removed the SOAP encoding from the SOAP tool.
 * Merged xsd into wsdl

2007-02-19 cjg
 * Added cache to MetaField::Fields to prevent execsive rendering times.

2007-02-19 cjg
 * Editorial restrictions now in dataset "eprint" rather than "buffer".

2007-02-19 cjg
 * It is now possible to search for a null date using "","EX"

2007-02-19 cjg
 * Rewrite now automatically updates static pages where possible. This code
    has duplicates of stuff in generate_static and isn't smart about the auto
    javascript and css or themes (yet).

2007-02-19 cjg
 * Changed Convert::PlainText into house code style.

2007-02-19 cjg
 * Added has_role method to User.pm
 * Fixed broken calls to $user->has_priv to use $user->has_role instead.

2007-02-19 cjg
 * If a title contains a link, it no longer shows the URL in the <title> 
    element.

2007-02-19 cjg
 * Cookie values are now randomised every time the login page is rendered.

2007-02-19 cjg
 * Pagerange now adds zero to to and from in ordering to force them to be
    numeric. so "foo" becomes "0" and "1234a" becomes "1234".

2007-03-02 cjg
 * Added a filter to eprints under review so that it only lists ones in
    buffer, not all those matching the scope.