@@ -1350,7 +1350,7 @@ sub rehash
 
 	my $hashfile = $self->get_eprint->local_path."/".
 		$self->get_value( "docid" ).".".
-		EPrints::Time::get_iso_timestamp().".xsh";
+		EPrints::Platform::get_hash_name();
 
 	EPrints::Probity::create_log( 
 		$self->{session}, 
