@@ -135,6 +135,8 @@ task. (example is unpacking a .tar.gz file).
  
 sub exec { return &{$real_module."::exec"}( @_ ); }
 
+sub get_hash_name { return &{$real_module."::exec"}( @_ ); }
+
 1;
 
 =back
